Add marketing section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/animate.css">
+<link rel="stylesheet" href="/css/fancybox.css">
 <style>
 </style>
 </head>
@@ -32,7 +33,7 @@
 				<li id="btn-about" class="active">about</li>
 				<li id="btn-projects">projects</li>
 				<li id="btn-books">books</li>
-				<li>marketing</li>
+				<li id="btn-marketing">marketing</li>
 			</ul>
 		</nav>
 		<section class="profile section" id="about">
@@ -183,7 +184,7 @@
 			</div>
 			</div>
 		</section>
-		<section class="projects section" id="projects">
+		<section class="projects section bg-gray" id="projects">
 		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">projects</h2>
 		<div class="likestore">
 			<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
@@ -350,12 +351,158 @@
 		</div>
 		</section>
 	</div>
+	<section class="marketing section bg-gray" id="marketing">
+	<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">marketing</h2>
+	<div class="banners animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/chef01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/chef.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">dm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/wine01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/wine.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">promo</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/design01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/design.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">banner</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/cookie01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/cookie.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">dm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
+	<div class="banners animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/japan01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/japan.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">banner</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/cloth01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/cloth.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">edm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/fonts01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/fonts.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">banner</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/pot02.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/pot2.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">edm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
+	<div class="banners animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/pot04.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/pot4.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">edm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/pot01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/pot.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">edm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/food01.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/food.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">edm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+		<div class="imgBox">
+			<div class="dummy"></div>
+			<a class="block fancybox" href="/images/marketing/pot03.jpg" data-fancybox-group="gallery">
+				<img src="/images/marketing/pot3.jpg" alt="">
+				<div class="imgMask">
+					<div class="txtBox">
+						<p class="f-20 title">edm</p>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
+	</section>
+	</section>
+
     <section class="footer"></section>
 	<div class="modal-backdrop"></div>
 
-<script src="/js/jquery.min.js"></script>
+<script src="/js/jquery-1.11.1.min.js"></script>
+<script src="/js/index.js"></script>
 <script src="/js/wow.js"></script>
 <script src="/js/main.js"></script>
-
+<script src="/js/fancybox.js"></script>
+<script>
+</script>
 </body>
 </html>
