Modify main style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>	
-	<section class="cover">	
+	<section class="cover sectionBorder">	
 		<div class="coverContent">						
 			<h1 class="animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">jessica wu</h1>
 			<p class="f-18 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">Living in the present & deep thinking.</p>
@@ -184,7 +184,7 @@
 			</div>
 			</div>
 		</section>
-		<section class="projects section bg-gray" id="projects">
+		<section class="projects section bg-gray sectionBorder" id="projects">
 		<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">projects</h2>
 		<div class="likestore">
 			<div class="info animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">
@@ -357,7 +357,7 @@
 		</div>
 		</section>
 	</div>
-	<section class="marketing section bg-gray" id="marketing">
+	<section class="marketing section bg-gray sectionBorder" id="marketing">
 	<h2 class="f-44 animated wow fadeInDown" data-wow-duration="1.0s" data-wow-delay=".4s">marketing</h2>
 	<div class="banners animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 		<div class="imgBox">
