Add bottom buttons on projects page

--- a/work/projects/funoo-identify.html
+++ b/work/projects/funoo-identify.html
@@ -58,6 +58,14 @@
 			</section>
 		</div>
 	</div>
+	<div class="buttons">
+		<button class="btn btn-outline f-15" onclick="location.href='funoo-console.html'">
+			PREV
+		</button>
+		<button class="btn btn-outline f-15" onclick="location.href='likestore-web.html'">
+			NEXT
+		</button>
+	</div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
