--- a/work/projects/likestore-console.html
+++ b/work/projects/likestore-console.html
@@ -50,6 +50,14 @@
 			</section>
 		</div>
 	</div>
+	<div class="buttons">
+		<button class="btn btn-outline f-15" onclick="location.href='likestore-web.html'">
+			PREV
+		</button>
+		<button class="btn btn-outline f-15" onclick="location.href='likestore-identify.html'">
+			NEXT
+		</button>
+	</div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
