--- a/work/projects/likestore-identify.html
+++ b/work/projects/likestore-identify.html
@@ -53,6 +53,14 @@
 			</section>
 		</div>
 	</div>
+	<div class="buttons">
+		<button class="btn btn-outline f-15" onclick="location.href='likestore-console.html'">
+			PREV
+		</button>
+		<button class="btn btn-outline f-15" onclick="location.href='crm.html'">
+			NEXT
+		</button>
+	</div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
