Add bottom buttons on books page

--- a/work/books/book-dish.html
+++ b/work/books/book-dish.html
@@ -74,6 +74,14 @@
 			</section>
 		</div>
 	</div>
+	<div class="buttons">
+		<button class="btn btn-outline f-15" onclick="location.href='book-taitung.html'">
+			PREV
+		</button>
+		<button class="btn btn-outline f-15" onclick="location.href='book-tea.html'">
+			NEXT
+		</button>
+	</div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
