--- a/work/books/book-quote.html
+++ b/work/books/book-quote.html
@@ -42,6 +42,14 @@
 			</section>
 		</div>
 	</div>
+	<div class="buttons">
+		<button class="btn btn-outline f-15" onclick="location.href='book-villa.html'">
+			PREV
+		</button>
+		<button class="btn btn-outline f-15" onclick="location.href='book-taitung.html'">
+			NEXT
+		</button>
+	</div>
     <section class="footer"></section>
 
 <script src="/js/jquery.min.js"></script>
