Refactor nav css and js

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/animate.css">
 <link rel="stylesheet" href="/css/fancybox.css">
-<style>
-</style>
 </head>
 
 <body>	
@@ -25,17 +23,7 @@
 		</button>
 	</section>
 	<div class="contentWrap" id="contentWrap">	
-		<nav class="stickyNav">
-			<button class="open-menu btn icon icon-sm icon-border-none">
-				<img src="/images/icons/open_menu.svg" alt="">
-			</button>
-			<ul class="menu-mobile-hidden">
-				<li id="btn-about" class="active">about</li>
-				<li id="btn-projects">projects</li>
-				<li id="btn-books">books</li>
-				<li id="btn-marketing">marketing</li>
-			</ul>
-		</nav>
+		<div id="myNav" class="navigation"></div>
 		<section class="profile section" id="about">
 			<figure>
 			<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s" src="images/jessica01.jpg">
@@ -508,7 +496,5 @@
 <script src="/js/wow.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/fancybox.js"></script>
-<script>
-</script>
 </body>
 </html>
