Add photo to book quote

--- a/work/books/book-quote.html
+++ b/work/books/book-quote.html
@@ -40,6 +40,14 @@
 					<img src="/images/bk-quote/quote013.jpg" alt="">
 				</figure>
 			</section>
+			<section class="section-demo copyright animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
+				<figure>
+					<img src="/images/bk-quote/quote014.jpg" srcset="/images/bk-quote/quote014.jpg 1000w, /images/bk-quote/quote014-small.jpg 600w" alt="">
+					<figcaption>
+						<a class="f-13" href="https://www.wowlavie.com/Magazine/AE2000782" target="_blank">photo by La Vie</a>
+					</figcaption>
+				</figure>				
+			</section>			
 		</div>
 	</div>
 	<div class="buttons">
