Add row reserve to book villa

--- a/work/books/book-villa.html
+++ b/work/books/book-villa.html
@@ -40,7 +40,7 @@
 					<img src="/images/bk-villa/villa013.jpg" alt="">
 				</figure>
 			</section>
-			<section class="section-desc space">
+			<section class="section-desc space desktop-reverse">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<img src="/images/bk-villa/villa014.jpg" alt="">
 				</figure>
@@ -48,7 +48,7 @@
 					<img src="/images/bk-villa/villa015.jpg" alt="">
 				</figure>
 			</section>
-			<section class="section-desc space">
+			<section class="section-desc space desktop-reverse">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<img src="/images/bk-villa/villa016.jpg" alt="">
 				</figure>
