--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -3,7 +3,7 @@
 <html lang="zh-Hant-Tw">
 <head>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-<link rel="shortcut icon" href="images/logo/favicon-likestore.ico" type="image/png">
+<link rel="shortcut icon" href="/images/icons/favicon.ico" type="image/png">
 <title>Jessica Wu</title>
 	
 <link rel="stylesheet" href="/css/work.css">
