--- a/work/projects/likestore-console.html
+++ b/work/projects/likestore-console.html
@@ -26,25 +26,41 @@
 						Likestore is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
 					</p>
 				</figcaption>
-				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/likestore/likestore021.jpg">
+				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/likestore/likestore021.jpg" alt="">
 			</figure>
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
 			<section class="section-desc">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/likestore/likestore022.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore022-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore022.jpg" alt="">
+						<img src="/images/likestore/likestore022.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/likestore/likestore023.gif" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore023-small.gif" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore023.gif" alt="">
+						<img src="/images/likestore/likestore023.gif" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure class="border-radius">
-					<img src="/images/likestore/likestore024.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore024-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore024.jpg" alt="">
+						<img src="/images/likestore/likestore024.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="border-radius">
-					<img src="/images/likestore/likestore025.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore025-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore025.jpg" alt="">
+						<img src="/images/likestore/likestore025.jpg" alt="">
+					</picture>
 				</figure>
 				
 			</section>
