--- a/work/projects/funoo-identify.html
+++ b/work/projects/funoo-identify.html
@@ -26,34 +26,58 @@
 						FunOO is a e-commerce platform, that empowered anyone to create their own online store with no coding skills needed.
 					</p>
 				</figcaption>
-				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/funoo/funoo011.jpg">
+				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/funoo/funoo011.jpg" alt="">
 			</figure>
 		</section>
 		<div class="contentWrap">
 			<section class="navigation"></section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/funoo/funoo012.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo012-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo012.jpg" alt="">
+						<img src="/images/funoo/funoo012.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/funoo/funoo013.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo013-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo013.jpg" alt="">
+						<img src="/images/funoo/funoo013.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/funoo/funoo017.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo017-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo017.jpg" alt="">
+						<img src="/images/funoo/funoo017.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/funoo/funoo016.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo016-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo016.jpg" alt="">
+						<img src="/images/funoo/funoo016.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure>
-					<img src="/images/funoo/funoo014.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo014-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo014.jpg" alt="">
+						<img src="/images/funoo/funoo014.jpg" alt="">
+					</picture>
 				</figure>
 				<figure>
-					<img src="/images/funoo/funoo015.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/funoo/funoo015-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/funoo/funoo015.jpg" alt="">
+						<img src="/images/funoo/funoo015.jpg" alt="">
+					</picture>
 				</figure>				
 			</section>
 		</div>
