--- a/work/projects/crm.html
+++ b/work/projects/crm.html
@@ -26,7 +26,7 @@
 						The CRM template is flexible, includes eDM, SMS, App push.
 					</p>
 				</figcaption>
-				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/crm/crm011.jpg">
+				<img class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/crm/crm011.jpg" alt="">
 			</figure>
 		</section>
 		<div class="contentWrap">
@@ -35,25 +35,45 @@
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<div class="dummy"></div>
 					<div class="block">
-						<img src="/images/crm.jpg" alt="">
+						<picture>
+							<source media="(max-width: 600px)" srcset="/images/crm-small.jpg" alt="">
+							<source media="(min-width: 601px)" srcset="/images/crm.jpg" alt="">
+							<img src="/images/crm.jpg" alt="">
+						</picture>
 					</div>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
 					<div class="dummy"></div>
 					<div class="block">
-						<img src="/images/crm/crm013.gif" alt="">
+						<picture>
+							<source media="(max-width: 600px)" srcset="/images/crm/crm013-small.gif" alt="">
+							<source media="(min-width: 601px)" srcset="/images/crm/crm013.gif" alt="">
+							<img src="/images/crm/crm013.gif" alt="">
+						</picture>
 					</div>
 				</figure>
 			</section>
 			<section class="section-demo animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure class="border-radius">
-					<img src="/images/crm/crm014.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm014-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm014.jpg" alt="">
+						<img src="/images/crm/crm014.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="border-radius">
-					<img src="/images/crm/crm015.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm015-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm015.jpg" alt="">
+						<img src="/images/crm/crm015.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="border-radius">
-					<img src="/images/crm/crm016.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/crm/crm016-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/crm/crm016.jpg" alt="">
+						<img src="/images/crm/crm016.jpg" alt="">
+					</picture>
 				</figure>				
 			</section>
 		</div>
