Add small size image to books

--- a/work/books/book-dish.html
+++ b/work/books/book-dish.html
@@ -34,42 +34,82 @@
 			<section class="navigation"></section>
 			<section class="section-desc space narrow-left">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-dish/dish012.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish012-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish012.jpg" alt="">
+						<img src="/images/bk-dish/dish012.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-dish/dish013.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish013-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish013.jpg" alt="">
+						<img src="/images/bk-dish/dish013.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-dish/dish014.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish014-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish014.jpg" alt="">
+						<img src="/images/bk-dish/dish014.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-dish/dish015.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish015-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish015.jpg" alt="">
+						<img src="/images/bk-dish/dish015.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-dish/dish016.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish016-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish016.jpg" alt="">
+						<img src="/images/bk-dish/dish016.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-dish/dish017.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish017-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish017.jpg" alt="">
+						<img src="/images/bk-dish/dish017.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space narrow-left">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-dish/dish021.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish021-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish021.jpg" alt="">
+						<img src="/images/bk-dish/dish021.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-dish/dish022.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish022-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish022.jpg" alt="">
+						<img src="/images/bk-dish/dish022.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-dish/dish023.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish023-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish023.jpg" alt="">
+						<img src="/images/bk-dish/dish023.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-dish/dish024.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-dish/dish024-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-dish/dish024.jpg" alt="">
+						<img src="/images/bk-dish/dish024.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 		</div>
