--- a/work/books/book-quote.html
+++ b/work/books/book-quote.html
@@ -13,7 +13,7 @@
 	<div class="workWrap book">	
 		<section class="section-info">
 			<figure>
-				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-quote/quote011.jpg">
+				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-quote/quote011.jpg" alt="">
 				<figcaption class="title animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
 						大師語錄系列
@@ -34,15 +34,27 @@
 			<section class="navigation"></section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-quote/quote012.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-quote/quote012-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-quote/quote012.jpg" alt="">
+						<img src="/images/bk-quote/quote012.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-quote/quote013.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-quote/quote013-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-quote/quote013.jpg" alt="">
+						<img src="/images/bk-quote/quote013.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-demo copyright animated wow fadeIn" data-wow-duration="1.0s" data-wow-delay=".2s">
 				<figure>
-					<img src="/images/bk-quote/quote014.jpg" srcset="/images/bk-quote/quote014.jpg 1000w, /images/bk-quote/quote014-small.jpg 600w" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-quote/quote014-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-quote/quote014.jpg" alt="">
+						<img src="/images/bk-quote/quote014.jpg" alt="">
+					</picture>
 					<figcaption>
 						<a class="f-13" href="https://www.wowlavie.com/Magazine/AE2000782" target="_blank">photo by La Vie</a>
 					</figcaption>
