--- a/work/books/book-taitung.html
+++ b/work/books/book-taitung.html
@@ -13,7 +13,7 @@
 	<div class="workWrap book">	
 		<section class="section-info">
 			<figure>
-				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-taitung/taitung011.jpg">
+				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-taitung/taitung011.jpg" alt="">
 				<figcaption class="title animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
 						漂留台東
@@ -34,18 +34,34 @@
 			<section class="navigation"></section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/book-taitung01.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/book-taitung01-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/book-taitung01.jpg" alt="">
+						<img src="/images/book-taitung01.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-taitung/taitung012.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-taitung/taitung012-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-taitung/taitung012.jpg" alt="">
+						<img src="/images/bk-taitung/taitung012.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-taitung/taitung013.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-taitung/taitung013-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-taitung/taitung013.jpg" alt="">
+						<img src="/images/bk-taitung/taitung013.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-taitung/taitung014.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-taitung/taitung014-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-taitung/taitung014.jpg" alt="">
+						<img src="/images/bk-taitung/taitung014.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 		</div>
