--- a/work/books/book-tea.html
+++ b/work/books/book-tea.html
@@ -13,7 +13,7 @@
 	<div class="workWrap book">	
 		<section class="section-info">
 			<figure>
-				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-tea/tea011.jpg">
+				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-tea/tea011.jpg" alt="">
 				<figcaption class="title animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
 						台茶小時代
@@ -34,26 +34,50 @@
 			<section class="navigation"></section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-tea/tea012.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-tea/tea012-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-tea/tea012.jpg" alt="">
+						<img src="/images/bk-tea/tea012.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-tea/tea013.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-tea/tea013-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-tea/tea013.jpg" alt="">
+						<img src="/images/bk-tea/tea013.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-tea/tea014.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-tea/tea014-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-tea/tea014.jpg" alt="">
+						<img src="/images/bk-tea/tea014.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-tea/tea015.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-tea/tea015-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-tea/tea015.jpg" alt="">
+						<img src="/images/bk-tea/tea015.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-tea/tea016.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-tea/tea016-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-tea/tea016.jpg" alt="">
+						<img src="/images/bk-tea/tea016.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-tea/tea017.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-tea/tea017-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-tea/tea017.jpg" alt="">
+						<img src="/images/bk-tea/tea017.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 		</div>
