--- a/work/books/book-villa.html
+++ b/work/books/book-villa.html
@@ -13,7 +13,7 @@
 	<div class="workWrap book">	
 		<section class="section-info">
 			<figure>
-				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-villa/villa011.jpg">
+				<img class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".4s" src="/images/bk-villa/villa011.jpg" alt="">
 				<figcaption class="title animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
 						東南亞理想旅店 100+
@@ -34,26 +34,50 @@
 			<section class="navigation"></section>
 			<section class="section-desc space">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-villa/villa012.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-villa/villa012-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-villa/villa012.jpg" alt="">
+						<img src="/images/bk-villa/villa012.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-villa/villa013.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-villa/villa013-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-villa/villa013.jpg" alt="">
+						<img src="/images/bk-villa/villa013.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space desktop-reverse">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-villa/villa014.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-villa/villa014-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-villa/villa014.jpg" alt="">
+						<img src="/images/bk-villa/villa014.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-villa/villa015.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-villa/villa015-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-villa/villa015.jpg" alt="">
+						<img src="/images/bk-villa/villa015.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 			<section class="section-desc space desktop-reverse">
 				<figure class="animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
-					<img src="/images/bk-villa/villa016.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-villa/villa016-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-villa/villa016.jpg" alt="">
+						<img src="/images/bk-villa/villa016.jpg" alt="">
+					</picture>
 				</figure>
 				<figure class="animated wow fadeInLeft" data-wow-duration="1.0s" data-wow-delay=".4s">
-					<img src="/images/bk-villa/villa017.jpg" alt="">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/bk-villa/villa017-small.jpg" alt="">
+						<source media="(min-width: 601px)" srcset="/images/bk-villa/villa017.jpg" alt="">
+						<img src="/images/bk-villa/villa017.jpg" alt="">
+					</picture>
 				</figure>
 			</section>
 		</div>
