--- a/work/projects/likestore-web.html
+++ b/work/projects/likestore-web.html
@@ -16,7 +16,7 @@
 			<figure>
 				<figcaption class="title animated wow fadeInRight" data-wow-duration="1.0s" data-wow-delay=".2s">
 					<h1 class="f-40">
-						likestore website
+						likestore homepage
 					</h1>
 					<div class="info">
 						<h3 class="f-25">
@@ -56,7 +56,13 @@
 						<img src="/images/likestore/likestore014.jpg" alt="">
 					</picture>
 				</figure>
-				
+				<figure class="bg-transparent">
+					<picture>
+						<source media="(max-width: 600px)" srcset="/images/likestore/likestore015-small.png">
+						<source media="(min-width: 601px)" srcset="/images/likestore/likestore015.png">
+						<img src="/images/likestore/likestore015.png" alt="">
+					</picture>
+				</figure>
 			</section>
 		</div>
 	</div>
